# stock_project

./: main.py  pyproject.toml  test.ipynb  test.py
.ipynb_checkpoints/: test-checkpoint.ipynb
config/: symbols.json
dao/postgresql/: company_profile_dao.py  config.py  connect.py  stock_data_dao.py
input/: clean_msn.csv  clean_vn-30.csv  clean_vnm.csv
model/: company_profile.py  stockData.py  stock_real_time_price.py
reference_codes/: first-approach-to-stock-market-prediction.ipynb
service/: crawl_stock_data_service.py  twelvedata_service.py  yahooquery_service.py
trainning_model/: SRAIMAX-withou-scale.ipynb  SRAIMAX.ipynb  SRAIMAX_AMD.ipynb  SRAIMAX_Apple.ipynb  SRAIMAX_Apple_copy.ipynb  SRAIMAX_Google.ipynb  SRAIMAX_test.ipynb
trainning_model/.ipynb_checkpoints/: SRAIMAX-checkpoint.ipynb
unprocessed_data/: msn.csv  process_data_VN_index.ipynb  vn-30.csv  vnm.csv
utils/: StockDataType.py
